[tool.poetry]
name = "luatable"
version = "0.1.0"
description = "Lua 5.0 table implementation in Python"
authors = ["Tran Xuan Loc <tranxuanloc19920@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
